2004-12-08  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	* src/yelp-pager.c:
	* src/yelp-utils.c:
	* src/yelp-window.c:
	- Hooked up reload, at least for DocBook

2004-12-05  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- About dialog work from Luca Ferretti

2004-12-05  Shaun McCance  <shaunm@gnome.org>

	* data/man.xml.in:
	- Added sections: 3f 3pm 3qt 3x

2004-12-05  Shaun McCance  <shaunm@gnome.org>

	* data/Makefile.am:
	* data/man.xml.in:
	* data/toc.xml.in:
	* po/POTFILES.in:
	* po/wa.po:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* stylesheets/toc2html.xsl:
	- Got the man pages listed in the TOC

2004-12-02  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "zu" to ALL_LINGUAS.

2004-11-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- Make convert_man_uri look up stuff in locales

2004-11-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- Allow gnome-help: URI scheme (Don Scorgie)
	- Make external links actually work (Don Scorgie)

	* src/yelp-window.c:
	- Fix 'Open Link in New Window' (Don Scorgie)

	* stylesheets/toc2html.xsl:
	- More TOC work

2004-11-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Leak less memory

	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* stylesheets/toc2html.xsl:
	- More TOC improvements

2004-11-28  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* data/Makefile.am
	* data/scrollkeeper.xml:
	* data/toc.xml.in:
	* src/Makefile.am:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* stylesheets/Makefile.am:
	* stylesheets/toc2html.xsl:
	- Added --enable-man and --enable-info
	- Revamped TOC code

2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "nso" to ALL_LINGUAS.

2004-11-21  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Patch from Quinn Kronifontes to add logo to about dialog
