@@ -1,3 +1,10 @@
+2004-12-09  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-base.c:
+	* src/yelp-toc-pager.c:
+	* src/yelp-utils.c:
+	- More robust URI-ish input handling, fixes #160635
+
 2004-12-08  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
